# httpx-frugal

./: .gitignore  CHANGELOG.md  README.md  original_source_code.py  pyproject.toml  roadmap.md
src/httpx_frugal/: __init__.py  _cache_admin.py  _cache_lookup.py  _common.py  _rate_introspection.py  async_client.py  client.py  exceptions.py  policy.py  transport.py  ttl.py
tests/: conftest.py  helpers.py  test_async_client.py  test_client.py  test_example.py  test_transport.py
