[project]
name = "httpx-frugal"
version = "0.2.0"
description = "An httpx client with persistent caching and rate limiting for data pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "httpx-frugal contributors" }]
keywords = ["httpx", "cache", "rate-limit", "hishel", "pyrate-limiter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "hishel[async]>=1.2,<2",
    "pyrate-limiter>=4,<5",
]

[project.optional-dependencies]
http2 = ["httpx[http2]"]
async = ["hishel[async]"]

[project.urls]
Homepage = "https://github.com/httpx-frugal/httpx-frugal"
Documentation = "https://github.com/httpx-frugal/httpx-frugal#readme"
Repository = "https://github.com/httpx-frugal/httpx-frugal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/httpx_frugal"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]
publish = [
    "twine>=6.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["original_source_code.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
